<resources>
    <string name="app_name">老板点评</string>
    <string name="pull_to_refresh_pull_label">松开立即刷新</string>
    <string name="pull_to_refresh_release_label">松开立即刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新数据..</string>
    <string name="pull_to_refresh_tap_label">点击这里刷新</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="photo_album">相册</string>
    <string name="register">注册</string>
    <string name="save">保存</string>
    <string name="complete">完成</string>
    <string name="ok">确定</string>
    <string name="clean">清空</string>
    <string name="pay">支付</string>
    <string name="time">时间</string>
    <string name="change">修改</string>
    <string name="examine_image">查看图片</string>
    <string name="submit_check">提交审核</string>
    <string name="add">添加</string>
    <string name="new_build">新建</string>
    <string name="corporate_juridical_person">法人代表</string>
    <string name="open_laobandianping">开启老板点评</string>
    <string name="default_name">未设置</string>
    <string name="app_exit_confirm">再按一次退出老板点评</string>
    <string name="submit">提交</string>
    <string name="net_false_hint">网络异常，请检查网络</string>
    <string name="for_the_moment_no_information">账号信息</string>
    <string name="please_input_search_content">请输入搜索内容</string>
    <string name="company_already_exist">您输入的公司已开通服务！\n请联系该公司管理员</string>
    <string name="myroles_error_hint">网络错误，请稍候重试</string>
    <string name="stage_archive_dialog_one">您是审核人，阶段评价已生效</string>
    <string name="stage_archive_dialog_two">审核通过后，阶段评价将生效</string>
    <string name="stage_archive_dialog_three">您是审核人，评价已生效</string>
    <string name="stage_archive_dialog_four">审核通过后，评价将生效</string>
    <string name="stage_archive_dialog_five">您是审核人，离任报告已生效</string>
    <string name="stage_archive_dialog_six">审核通过后，离任报告将生效</string>
    <string name="stage_archive_dialog_seven">您是审核人，离任报告已生效</string>
    <string name="stage_archive_dialog_eight">审核通过后，离任报告将生效</string>
    <string name="login">登录</string>
    <string name="boss_comment_recharge">交易记录</string>
    <string name="company_login">企业登录</string>
    <string name="login_boss_comments">登录老板点评</string>
    <string name="bosscomments_web">老板点评网页版</string>
    <string name="main_tab_first">工作台</string>
    <string name="main_tab_second">老板圈</string>
    <string name="main_tab_third">我的</string>
    <string name="chome_tab_company_opinion">公司口碑</string>
    <string name="chome_tab_cpersonal">我的</string>
    <string name="company_register">企业注册</string>
    <string name="person_register">个人注册</string>
    <string name="main_comment_on_the_employee">点评员工</string>
    <string name="main_query">查询</string>
    <string name="main_workbench">工作台</string>
    <string name="manage_employee_record">管理员工档案</string>
    <string name="other">其他</string>
    <string name="all_employee_record">员工档案</string>
    <string name="employee_evaluate">阶段评价</string>
    <string name="departure_report">离任报告</string>
    <string name="background_investigation">背景调查</string>
    <string name="recruit">招聘</string>
    <string name="search_employee_evaluate">查询员工评价</string>
    <string name="invite_company_register">邀请老板注册</string>
    <string name="main_message">消息</string>
    <string name="add_employee_record_title">建立员工档案</string>
    <string name="on_the_job_can_not_input">在职可不填</string>
    <string name="employee_avatar">员工照片</string>
    <string name="current_state">目前状态</string>
    <string name="add_record_employee_name">姓名</string>
    <string name="employee_identity_number">身份证号</string>
    <string name="employee_phone_number">手机号</string>
    <string name="employee_entry_time">入职日期</string>
    <string name="employee_departure_time">离任日期</string>
    <string name="employee_school_of_graduation">毕业学校</string>
    <string name="employee_education_background">学历</string>
    <string name="time_limit">入职时间不能晚于离任时间</string>
    <string name="post_time_limit">任职结束时间不能小于任职开始时间</string>
    <string name="post_time_entry">请输入入职时间</string>
    <string name="this_employee_name">该员工的姓名</string>
    <string name="input_employee_name">请输入姓名</string>
    <string name="please_input_name">请输入开户名</string>
    <string name="please_input_bank_name">请输入开户银行</string>
    <string name="please_input_identity_number">自动提取年龄、性别</string>
    <string name="please_input_phone_number">常用的手机号</string>
    <string name="please_input_graduation_school">毕业学校</string>
    <string name="add_the_position">添加职务</string>
    <string name="entry_time">入职的日期</string>
    <string name="add_employee_record_departure_time">离任的日期</string>
    <string name="please_select_entry_time">请选择入职日期</string>
    <string name="please_select_departure_time">请选择离任日期</string>
    <string name="departure_time_limit">在职，可不填</string>
    <string name="please_input_school_of_graduation">请填写毕业学校</string>
    <string name="school_of_graduation_limit">毕业学校最多30个汉字</string>
    <string name="this_employee_highest_education_background">该员工的最高学历</string>
    <string name="please_select_education_background">请选择学历</string>
    <string name="please_select_current_status">请选择目前状态</string>
    <string name="employee_record_name_limit">姓名最多5个汉字</string>
    <string name="please_add_post">请添加职务</string>
    <string name="add_employee_record_web_prompt">在电脑上建立员工档案</string>
    <string name="send_sms_inform_employee">发送短信告知员工</string>
    <string name="select_department_title">选择部门</string>
    <string name="build_hold_post">添加职务</string>
    <string name="hold_post_start_time">任职开始时间</string>
    <string name="hold_post_end_time">任职结束时间</string>
    <string name="hold_post">担任职务</string>
    <string name="wage_income">年薪收入(万元)</string>
    <string name="in_department">所在部门</string>
    <string name="whether_the_recent_positions">是否是最近担任职务</string>
    <string name="please_input_hold_post">请输入担任职务</string>
    <string name="please_select_hold_post_start_time">请选择任职开始时间</string>
    <string name="please_select_hold_post_end_time">请选择任职结束时间</string>
    <string name="select_already_build_department">选择已创建的部门</string>
    <string name="input_department_name">请输入部门名称</string>
    <string name="please_input_department_name">请选择所在部门</string>
    <string name="please_input_salary_post">包括：薪资、福利、奖金等等</string>
    <string name="wage_income_length_limit">请输入正确的年薪收入</string>
    <string name="input_hold_post_length_limit">担任职务最多30个汉字</string>
    <string name="input_department_name_length_limit">所在部门最多20个汉字</string>
    <string name="department_manage">部门管理</string>
    <string name="my_other_company">我的其他公司</string>
    <string name="invite_other_company">邀请其他公司</string>
    <string name="department_about_us">关于我们</string>
    <string name="department_problems">常见问题</string>
    <string name="department_feedback">意见反馈</string>
    <string name="build_new_company">创建新公司</string>
    <string name="already_have_account">马上登录</string>
    <string name="company_agreement">《企业用户协议&#38;隐私政策》</string>
    <string name="company_user_privacy_agreement">《企业用户隐私政策》</string>
    <string name="personal_agreement">《个人用户协议&#38;隐私政策》</string>
    <string name="personal_user_privacy_agreement">《个人用户隐私政策》</string>
    <string name="user_agree_read">我已阅读并同意</string>
    <string name="company_identity">进入企业工作台</string>
    <string name="person_identity">进入个人工作台</string>
    <string name="open_service">开通服务</string>
    <string name="open_boss_comment_service">开通老板点评服务</string>
    <string name="company_name">公司名称：</string>
    <string name="please_company_name">请输入和营业执照一致企业名称</string>
    <string name="open_account_fee">开户费：</string>
    <string name="should_pay_money">应付金额：</string>
    <string name="already_pay_get_invoice">支付后可索取发票</string>
    <string name="your_name">您的姓名：</string>
    <string name="your_position">您的身份：</string>
    <string name="please_input_your_name">请输入您的姓名</string>
    <string name="please_input_your_position">请输入您的职务，如：总经理</string>
    <string name="i_need_invoices">支付后可开发票，请准确填写公司名称</string>
    <string name="please_input_company_name">请输入公司名称</string>
    <string name="company_name_length_limit">公司名称超过了30个字</string>
    <string name="bosscomment_service_already_open">老板点评服务已开通</string>
    <string name="two_seconds_automatic_skip">2秒后自动跳转</string>
    <string name="your_position_length_limit">职务最多20个字</string>
    <string name="name_length_limit">姓名最多5个字</string>
    <string name="if_need_help">如需帮助，请联系我们</string>
    <string name="only_recharge">仅充值</string>
    <string name="input_recharge_money">输入充值金额</string>
    <string name="please_recharge_money">请输入充值金额</string>
    <string name="recharge_record_income">收入记录</string>
    <string name="recharge_record_expense_calendar">消费记录</string>
    <string name="recharge_record_withdrawal_record">提现记录</string>
    <string name="withdraw_deposit_title">提现</string>
    <string name="company_vault">公司金库</string>
    <string name="can_be_withdrawal_amount">可提现金额：</string>
    <string name="the_maximum_withdrawal_amount">最大提现限额：</string>
    <string name="input_withdrawal_amount">提现金额</string>
    <string name="withdrawal_explain">提现说明：</string>
    <string name="withdrawal_explain_company_one">1、提现需提供公司发票</string>
    <string name="withdrawal_explain_company_two">2、提现后将在10个工作日内打款</string>
    <string name="withdraw_company_name">公司名称</string>
    <string name="audit_withdraw_company_name">公司名称：</string>
    <string name="deposit_bank_name">开户银行</string>
    <string name="audit_deposit_bank_name">开户银行：</string>
    <string name="bank_card_number">银行账号</string>
    <string name="audit_bank_card_number">银行账号：</string>
    <string name="let_public_bank_account">对公银行账号</string>
    <string name="input_bank_count">请输入银行账号</string>
    <string name="input_money">请输入金额</string>
    <string name="public_bank_account">新建对公账号</string>
    <string name="can_check_note">可以在交易记录中查看提现信息</string>
    <string name="submit_ok">提现申请已提交！\n1个工作日内运营将处理您的请求。\n联系客服400-815-9166</string>
    <string name="public_bank_account_explain">1、提现需提供专用发票；\n2、发票抬头为“北京全联职信科技有限公司”；\n3、发票收到后老板点评将在10个工作日内打款；</string>
    <string name="mobile_phone_is_empty">请输入您的手机号</string>
    <string name="please_input_your_mobile_phone">请输入您的手机号</string>
    <string name="close_dialog">关闭</string>
    <string name="please_agree_bosscomment_agreement">请阅读并同意用户协议&#38;隐私政策</string>
    <string name="my_company">我的公司</string>
    <string name="change_identity">切换个人身份</string>
    <string name="clean_cache">清理缓存</string>
    <string name="suggestion_feedback_text">意见反馈</string>
    <string name="system_setting_logout">退出当前账号</string>
    <string name="feedback_hint">您的意见让我们变得更好</string>
    <string name="tell_how_to_do">您希望提交人怎么调整？</string>
    <string name="reason_why_nopass">请输入未通过的理由，最多200字</string>
    <string name="tell_something_boss">说说老板的事儿</string>
    <string name="feedback_content_not_empty">意见反馈内容不能为空！</string>
    <string name="feedback_content_length_limit">抱歉！您输入的文字太多了，请在1000个字以内~</string>
    <string name="delete_accredit_person_hint">确定要删除吗？\n删除后授权关系将取消</string>
    <string name="the_phone_has_already_been_registered">手机号已经注册，请登录</string>
    <string name="go_pay">去支付</string>
    <string name="employee_identity_number_not_empty">请输入身份证号</string>
    <string name="personal_look_hint">为了查询更精准及保护隐私，请校验身份</string>
    <string name="personal_identity_check_hint">身份证号填写后不能修改，请谨慎填写</string>
    <string name="personal_open_service">开通会员</string>
    <string name="personal_identity_number">身份证号：</string>
    <string name="personal_service_fee">服务年费</string>
    <string name="personal_buy_service_hint">一年内可免费查看对自己的点评</string>
    <string name="personal_privilege_member_exclusive">会员特权：\n1.免费查看对自己的点评\n2.查看热招职位，免费求职</string>
</resources>