<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        layout="@layout/include_head_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/DIMEN_30PX"
        android:orientation="vertical"
        android:padding="@dimen/DIMEN_30PX">

        <TextView
            android:id="@+id/service_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_recharge_money"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/DIMEN_34PX" />

        <EditText
            android:id="@+id/sure_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/DIMEN_20PX"
            android:background="@null"
            android:hint="@string/please_recharge_money"
            android:textColor="@color/main_text_color"
            android:textColorHint="@color/menu_color"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/DIMEN_60PX">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/should_pay_money"
            android:textSize="@dimen/DIMEN_34PX" />

        <TextView
            android:id="@+id/should_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0元"
            android:textSize="@dimen/DIMEN_34PX" />
    </LinearLayout>

    <com.juxian.bosscomments.widget.Button
        android:id="@+id/setting_password_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_88PX"
        android:layout_marginLeft="@dimen/DIMEN_90PX"
        android:layout_marginRight="@dimen/DIMEN_90PX"
        android:layout_marginTop="@dimen/DIMEN_50PX"
        android:background="@drawable/btn_gold"
        android:text="@string/go_pay"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/DIMEN_34PX" />
</LinearLayout>