<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_white"
    android:orientation="vertical">

    <com.juxian.bosscomments.widget.TextView
        android:id="@+id/dialog_tips_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/DIMEN_80PX"
        android:paddingBottom="@dimen/DIMEN_80PX"
        android:paddingLeft="@dimen/DIMEN_30PX"
        android:paddingRight="@dimen/DIMEN_30PX"
        android:gravity="center"
        android:text="@string/delete_accredit_person_hint"
        android:textColor="@color/main_text_color"
        android:textSize="@dimen/DIMEN_30PX" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_1PX"
        android:background="@color/line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.juxian.bosscomments.widget.TextView
            android:id="@+id/dialog_tips_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/DIMEN_90PX"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/close_dialog"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/DIMEN_30PX" />

        <View
            android:id="@+id/line"
            android:layout_width="@dimen/DIMEN_1PX"
            android:layout_height="@dimen/DIMEN_90PX"
            android:background="@color/line_color" />

        <com.juxian.bosscomments.widget.TextView
            android:id="@+id/dialog_tips_ok"
            android:layout_width="0dp"
            android:layout_height="@dimen/DIMEN_90PX"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>
</LinearLayout>
