<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_background">

    <View
        android:id="@+id/headcolor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_40PX"
        android:background="@color/main_color"/>

    <!--<FrameLayout-->
    <!--android:id="@+id/fragment_container"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_above="@+id/main_radios"-->
    <!--android:layout_below="@+id/headcolor"-->
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->
    <com.juxian.bosscomments.widget.NoScrollViewPager
        android:id="@+id/activity_home_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_radios"
        android:layout_below="@+id/headcolor"/>

    <RadioGroup
        android:id="@+id/main_radios"
        android:layout_width="match_parent"
        android:layout_height="@dimen/head_height"
        android:layout_alignParentBottom="true"
        android:layout_weight="2"
        android:background="@color/home_radiogroup_bg_color"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/DIMEN_8PX">

        <RadioButton
            android:id="@+id/rb_tab_main"
            style="@style/main_bottom_tab"
            android:checked="false"
            android:drawableTop="@drawable/tab_first_selector"
            android:text="@string/main_tab_first"/>

        <RadioButton
            android:id="@+id/rb_tab_account"
            style="@style/main_bottom_tab"
            android:drawableTop="@drawable/tab_second_selector"
            android:text="@string/main_tab_second"/>

        <RadioButton
            android:id="@+id/rb_tab_invite"
            style="@style/main_bottom_tab"
            android:drawableTop="@drawable/tab_third_selector"
            android:text="@string/main_tab_third"/>
    </RadioGroup>
</RelativeLayout>

