<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        layout="@layout/include_head_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_144PX"
        android:paddingLeft="@dimen/DIMEN_22PX"
        android:paddingRight="@dimen/DIMEN_22PX"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/DIMEN_30PX"
            android:textColor="@color/main_text_color"
            android:text="@string/personal_open_service"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/DIMEN_18PX"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_text_color"
                android:textSize="@dimen/DIMEN_30PX"
                android:text="@string/personal_identity_number"/>
            <TextView
                android:id="@+id/personal_identity_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_text_color"
                android:textSize="@dimen/DIMEN_30PX" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/activity_edit_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/excel_height_90px"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/DIMEN_22PX">

        <com.juxian.bosscomments.widget.TextView
            android:id="@+id/activity_phone_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/personal_service_fee"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/DIMEN_30PX" />

        <com.juxian.bosscomments.widget.TextView
            android:id="@+id/identity_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/DIMEN_52PX"
            android:layout_toRightOf="@+id/activity_phone_title"
            android:background="@null"
            android:gravity="right"
            android:text="20"
            android:singleLine="true"
            android:textColor="@color/main_text_color"
            android:textColorHint="@color/menu_color"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/DIMEN_30PX" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/DIMEN_22PX"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/DIMEN_30PX"
            android:textColor="@color/main_text_color"
            android:text="元"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/menu_color"
        android:layout_marginTop="@dimen/DIMEN_20PX"
        android:layout_marginLeft="@dimen/DIMEN_22PX"
        android:text="@string/personal_buy_service_hint"
        android:textSize="@dimen/DIMEN_24PX"/>

    <include
        layout="@layout/include_button_text34"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/DIMEN_90PX"
        android:layout_marginRight="@dimen/DIMEN_90PX"
        android:layout_marginTop="@dimen/DIMEN_50PX" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/menu_color"
        android:layout_marginTop="@dimen/DIMEN_20PX"
        android:layout_marginLeft="@dimen/DIMEN_90PX"
        android:text="@string/personal_privilege_member_exclusive"
        android:textSize="@dimen/DIMEN_24PX"/>
</LinearLayout>